--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Leaf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ThickLine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThickLine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
