--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="ThickLine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SFML_Utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
