Added basic leaf generation

--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="ThickLine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Leaf.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SFML_Utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Leaf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
