--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Branch.cpp" />
     <ClCompile Include="Attractor.cpp" />
+    <ClCompile Include="Leaf.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Polygon.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Branch.h" />
     <ClInclude Include="Attractor.h" />
+    <ClInclude Include="Leaf.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="Point.h" />
