--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="ThickLine.cpp" />
     <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="UserGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\utils\color.hpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="RNG.h" />
     <ClInclude Include="ThickLine.h" />
     <ClInclude Include="Tree.h" />
+    <ClInclude Include="UserGUI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
