--- a/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
+++ b/SpaceColonization/SpaceColonization/SpaceColonization.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="..\include\imgui-styles\imgui_themes.h">
       <Filter>ImGUI Styles</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\utils\logging.hpp">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
