Changed RNG.h to RNG.hpp and moved it to utils/

--- a/SpaceColonization/SpaceColonization.vcxproj
+++ b/SpaceColonization/SpaceColonization.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="..\include\imgui-styles\imgui_themes.h" />
     <ClInclude Include="..\include\utils\color.hpp" />
     <ClInclude Include="..\include\utils\logging.hpp" />
+    <ClInclude Include="..\include\utils\RNG.hpp" />
     <ClInclude Include="..\include\utils\vec2.hpp" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Branch.h" />
@@ -166,7 +167,6 @@
     <ClInclude Include="Line.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="Point.h" />
-    <ClInclude Include="RNG.h" />
     <ClInclude Include="ThickLine.h" />
     <ClInclude Include="Tree.h" />
     <ClInclude Include="UserGUI.h" />
