--- a/SpaceColonization/SpaceColonization.vcxproj.filters
+++ b/SpaceColonization/SpaceColonization.vcxproj.filters
@@ -98,9 +98,6 @@
     <ClInclude Include="Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RNG.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Attractor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -132,6 +129,9 @@
       <Filter>ImGUI Styles</Filter>
     </ClInclude>
     <ClInclude Include="..\include\utils\logging.hpp">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\utils\RNG.hpp">
       <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
