Renamed RNG.hpp to rng.hpp

--- a/SpaceColonization/SpaceColonization.vcxproj
+++ b/SpaceColonization/SpaceColonization.vcxproj
@@ -157,7 +157,7 @@
     <ClInclude Include="..\include\imgui-styles\imgui_themes.h" />
     <ClInclude Include="..\include\utils\color.hpp" />
     <ClInclude Include="..\include\utils\logging.hpp" />
-    <ClInclude Include="..\include\utils\RNG.hpp" />
+    <ClInclude Include="..\include\utils\rng.hpp" />
     <ClInclude Include="..\include\utils\vec2.hpp" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Branch.h" />
